first commit with controlnet modified

--- a/configs/controldream-sd.yaml
+++ b/configs/controldream-sd.yaml
@@ -1,4 +1,4 @@
-name: "fantasia3d"
+name: "fantasia3d-controlnet"
 tag: "${rmspace:${system.prompt_processor.prompt},_}"
 exp_root_dir: "outputs"
 seed: 0
@@ -19,9 +19,10 @@ data:
   eval_camera_distance: 3.
   eval_fovy_deg: 45.
 
-system_type: "fantasia3d-system"
+system_type: "fantasia3d-controlnet-system"
 system:
   latent_steps: 1000
+  cond_img: "load/images/shark_right_trans.png"
   geometry_type: "implicit-sdf"
   geometry:
     radius: 1.0
@@ -55,23 +56,12 @@ system:
 
   renderer_type: "nvdiff-rasterizer"
 
-  # prompt_processor_type: "stable-diffusion-prompt-processor"
-  # prompt_processor:
-  #   pretrained_model_name_or_path: "stabilityai/stable-diffusion-2-1-base"
-  #   prompt: ???
-
-  # guidance_type: "stable-diffusion-guidance"
-  # guidance:
-  #   pretrained_model_name_or_path: "stabilityai/stable-diffusion-2-1-base"
-  #   guidance_scale: 100.
-  #   max_step_percent: 0.5
-  #   weighting_strategy: fantasia3d
-
   prompt_processor_type: "stable-diffusion-prompt-processor"
   prompt_processor:
     pretrained_model_name_or_path: "runwayml/stable-diffusion-v1-5"
+    prompt: ???
 
-  guidance_type: "stable-diffusion-controlnet-guidance"
+  guidance_type: "stable-diffusion-controlnet-img-guidance"
   guidance:
     control_type: "normal"
     min_step_percent: 0.02
@@ -79,7 +69,6 @@ system:
     condition_scale: 1.0
     guidance_scale: 100
     use_sds: true
-
 
   loggers:
     wandb:
