--- a/configs/fantasia3d-texture.yaml
+++ b/configs/fantasia3d-texture.yaml
@@ -71,32 +71,32 @@ system:
 
   renderer_type: "nvdiff-rasterizer"
 
-  prompt_processor_type: "stable-diffusion-prompt-processor"
-  prompt_processor:
-    pretrained_model_name_or_path: "stabilityai/stable-diffusion-2-1-base"
-    prompt: ???
+  # prompt_processor_type: "stable-diffusion-prompt-processor"
+  # prompt_processor:
+  #   pretrained_model_name_or_path: "stabilityai/stable-diffusion-2-1-base"
+  #   prompt: ???
 
-  guidance_type: "stable-diffusion-guidance"
-  guidance:
-    pretrained_model_name_or_path: "stabilityai/stable-diffusion-2-1-base"
-    guidance_scale: 100
-    weighting_strategy: sds
-    min_step_percent: 0.02
-    max_step_percent: 0.50
+  # guidance_type: "stable-diffusion-guidance"
+  # guidance:
+  #   pretrained_model_name_or_path: "stabilityai/stable-diffusion-2-1-base"
+  #   guidance_scale: 100
+  #   weighting_strategy: sds
+  #   min_step_percent: 0.02
+  #   max_step_percent: 0.50
 
   # If using controlnet guidance:
-#   prompt_processor_type: "stable-diffusion-prompt-processor"
-#   prompt_processor:
-#     pretrained_model_name_or_path: "runwayml/stable-diffusion-v1-5"
+  prompt_processor_type: "stable-diffusion-prompt-processor"
+  prompt_processor:
+    pretrained_model_name_or_path: "runwayml/stable-diffusion-v1-5"
 
-#   guidance_type: "stable-diffusion-controlnet-guidance"
-#   guidance:
-#     control_type: "normal"
-#     min_step_percent: 0.02
-#     max_step_percent: 0.50
-#     condition_scale: 1.0
-#     guidance_scale: 100
-#     use_sds: true
+  guidance_type: "stable-diffusion-controlnet-guidance"
+  guidance:
+    control_type: "canny"
+    min_step_percent: 0.02
+    max_step_percent: 0.50
+    condition_scale: 1.0
+    guidance_scale: 100
+    use_sds: true
 
 
   loggers:
