--- a/configs/shape-test.yaml
+++ b/configs/shape-test.yaml
@@ -84,6 +84,7 @@ system:
 
   loss:
     lambda_l1: 10.
+    lambda_sds: 1.
     lambda_orient: [0, 10., 1000., 5000]
     lambda_sparsity: 1.
     lambda_opaque: 0.
