--- a/configs/shape-control.yaml
+++ b/configs/shape-control.yaml
@@ -1,4 +1,4 @@
-name: "shape-test"
+name: "shape-controlnet"
 tag: "${rmspace:${system.prompt_processor.prompt},_}"
 exp_root_dir: "outputs"
 seed: 0
@@ -15,7 +15,7 @@ data:
   eval_camera_distance: 2.0
   eval_fovy_deg: 70.
 
-system_type: "shape-1-system"
+system_type: "shape-controlnet-system"
 system:
   mesh_path: "/nvme/yyh/threestudio/load/shapes/3d_cake.glb"
   geometry_type: "implicit-volume"
@@ -57,24 +57,28 @@ system:
   background_type: "neural-environment-map-background"
   background:
     color_activation: sigmoid
+  # background_type: "solid-color-background"
+
 
   renderer_type: "nerf-volume-renderer"
   renderer:
     radius: ${system.geometry.radius}
-    num_samples_per_ray: 2048
+    num_samples_per_ray: 512
+
 
   prompt_processor_type: "stable-diffusion-prompt-processor"
   prompt_processor:
-    pretrained_model_name_or_path: "stabilityai/stable-diffusion-2-1-base"
+    pretrained_model_name_or_path: "runwayml/stable-diffusion-v1-5"
     prompt: ???
 
-  guidance_type: "stable-diffusion-guidance"
+  guidance_type: "stable-diffusion-controlnet-img-guidance"
   guidance:
-    pretrained_model_name_or_path: "stabilityai/stable-diffusion-2-1-base"
-    guidance_scale: 100.
-    weighting_strategy: sds
+    control_type: "canny"
     min_step_percent: 0.02
-    max_step_percent: 0.98
+    max_step_percent: 0.50
+    condition_scale: 1.0
+    guidance_scale: 100
+    use_sds: true
 
   loggers:
     wandb:
@@ -83,11 +87,11 @@ system:
       name: None
 
   loss:
-    lambda_l1: 10.
     lambda_sds: 1.
     lambda_orient: [0, 10., 1000., 5000]
     lambda_sparsity: 1.
     lambda_opaque: 0.
+  
   optimizer:
     name: Adam
     args:
@@ -104,7 +108,7 @@ trainer:
   max_steps: 10000
   log_every_n_steps: 1
   num_sanity_val_steps: 0
-  val_check_interval: 200
+  val_check_interval: 500
   enable_progress_bar: true
   precision: 32
 
