--- a/configs/shape-control.yaml
+++ b/configs/shape-control.yaml
@@ -105,7 +105,7 @@ system:
 
   guidance_type: "stable-diffusion-controlnet-img-guidance"
   guidance:
-    control_type: "canny"
+    control_type: "normal"
     min_step_percent: 0.02
     max_step_percent: 0.50
     condition_scale: 1.0
@@ -123,7 +123,7 @@ system:
     lambda_orient: [0, 10., 1000., 5000]
     lambda_sparsity: 1.
     lambda_opaque: 0.
-    lambda_l1: 1.
+    #lambda_l1: 1.
 
   optimizer:
     name: Adam
@@ -133,15 +133,15 @@ system:
       eps: 1.e-15
     params:
       geometry:
-        lr: 0.001
+        lr: 0.01
       background:
         lr: 0.001
 
 trainer:
-  max_steps: 10000
+  max_steps: 6000
   log_every_n_steps: 1
   num_sanity_val_steps: 0
-  val_check_interval: 500
+  val_check_interval: 200
   enable_progress_bar: true
   precision: 32
 
