--- a/configs/shape-control.yaml
+++ b/configs/shape-control.yaml
@@ -11,7 +11,7 @@ data:
   camera_distance_range: [1.5, 2.0]
   fovy_range: [40, 70]
   elevation_range: [-10, 45]
-  light_sample_strategy: "dreamfusion"
+  light_sample_strategy: "magic3d"
   eval_camera_distance: 2.0
   eval_fovy_deg: 70.
 
@@ -68,15 +68,18 @@ system:
     shape_init: ???
     shape_init_params: 1.0
     shape_init_mesh_up: "+y"
-    shape_init_mesh_front: "-z"
+    shape_init_mesh_front: "+z"
   mesh_fitting_material_type: "diffuse-with-point-light-material"
   mesh_fitting_material:
     ambient_only_steps: 0
     soft_shading: true
-  mesh_fitting_background_type: "solid-color-background"
+  # mesh_fitting_background_type: "solid-color-background"
+  # mesh_fitting_background:
+  #   n_output_dims: 3
+  #   color: [118, 116, 115]
+  mesh_fitting_background_type: "neural-environment-map-background"
   mesh_fitting_background:
-    n_output_dims: 3
-    color: [0, 0, 0]
+    color_activation: sigmoid
   mesh_fitting_renderer_type: "mesh-fitting-renderer"
   mesh_fitting_renderer:
     context_type: cuda
@@ -101,6 +104,7 @@ system:
   prompt_processor_type: "stable-diffusion-prompt-processor"
   prompt_processor:
     pretrained_model_name_or_path: "runwayml/stable-diffusion-v1-5"
+    use_prompt_debiasing: false
     prompt: ???
 
   guidance_type: "stable-diffusion-controlnet-img-guidance"
@@ -116,14 +120,14 @@ system:
     wandb:
       enable: false
       project: "threestudio"
-      name: None
+      name: "shape_controlnet_muiltview_3step_corgi_test_1"
 
   loss:
     lambda_sds: 1.
     lambda_orient: [0, 10., 1000., 5000]
     lambda_sparsity: 1.
     lambda_opaque: 0.
-    #lambda_l1: 1.
+    lambda_l1: 1.
 
   optimizer:
     name: Adam
@@ -138,7 +142,7 @@ system:
         lr: 0.001
 
 trainer:
-  max_steps: 6000
+  max_steps: 5000
   log_every_n_steps: 1
   num_sanity_val_steps: 0
   val_check_interval: 200
