--- a/configs/shape-control.yaml
+++ b/configs/shape-control.yaml
@@ -9,15 +9,16 @@ data:
   width: 128
   height: 128
   camera_distance_range: [1.5, 2.0]
-  fovy_range: [15, 60]
-  elevation_range: [0, 30]
+  #fovy_range: [15, 60]
+  #elevation_range: [0, 30]
+  fovy_range: [35, 70]
+  elevation_range: [-10, 45]
   light_sample_strategy: "magic3d"
   eval_camera_distance: 2.0
   eval_fovy_deg: 70.
 
 system_type: "shape-controlnet-system"
 system:
-  mesh_path: "/nvme/yyh/threestudio/load/shapes/3d_cake.obj"
   geometry_type: "implicit-volume"
   geometry:
     radius: 2.0
@@ -73,30 +74,38 @@ system:
   mesh_fitting_material:
     ambient_only_steps: 0
     soft_shading: true
-  # mesh_fitting_background_type: "solid-color-background"
-  # mesh_fitting_background:
-  #   n_output_dims: 3
-  #   color: [118, 116, 115]
-  mesh_fitting_background_type: "neural-environment-map-background"
+  mesh_fitting_background_type: "solid-color-background"
   mesh_fitting_background:
-    color_activation: sigmoid
+    n_output_dims: 3
+    color: [0, 0, 0]
+  # mesh_fitting_background_type: "neural-environment-map-background"
+  # mesh_fitting_background:
+  #   color_activation: sigmoid
   mesh_fitting_renderer_type: "mesh-fitting-renderer"
   mesh_fitting_renderer:
     context_type: cuda
     
   material_type: "diffuse-with-point-light-material"
   material:
-    ambient_only_steps: 2001
+    ambient_only_steps: 3001
     albedo_activation: sigmoid
 
   background_type: "neural-environment-map-background"
   background:
     color_activation: sigmoid
+    random_aug: true
   # background_type: "solid-color-background"
-
+  # background:
+  #   n_output_dims: 3
+  #   color: [0, 0, 0]
 
   renderer_type: "nerf-volume-renderer"
   renderer:
+    radius: ${system.geometry.radius}
+    num_samples_per_ray: 512
+
+  init_renderer_type: "nerf-volume-renderer"
+  init_renderer:
     radius: ${system.geometry.radius}
     num_samples_per_ray: 512
 
@@ -105,7 +114,15 @@ system:
   prompt_processor:
     pretrained_model_name_or_path: "runwayml/stable-diffusion-v1-5"
     use_prompt_debiasing: false
+    negative_prompt: "ugly, bad anatomy, blurry, pixelated obscure, unnatural colors, poor lighting, dull, and unclear, cropped, lowres, low quality, artifacts, duplicate, morbid, mutilated, poorly drawn face, deformed, dehydrated, bad proportions"
     prompt: ???
+
+  original_prompt_processor_type: "stable-diffusion-prompt-processor"
+  original_prompt_processor:
+    pretrained_model_name_or_path: "runwayml/stable-diffusion-v1-5"
+    use_prompt_debiasing: false
+    negative_prompt: "ugly, bad anatomy, blurry, pixelated obscure, unnatural colors, poor lighting, dull, and unclear, cropped, lowres, low quality, artifacts, duplicate, morbid, mutilated, poorly drawn face, deformed, dehydrated, bad proportions"
+    prompt: ${system.prompt_processor.prompt}
 
   guidance_type: "stable-diffusion-controlnet-img-guidance"
   guidance:
@@ -120,7 +137,7 @@ system:
     wandb:
       enable: false
       project: "threestudio"
-      name: "shape_controlnet_muiltview_3step_corgi_test_1"
+      name: "shape_controlnet_muiltview_3step_armchair_test_1"
 
   loss:
     lambda_sds: 1.
@@ -140,12 +157,27 @@ system:
         lr: 0.01
       background:
         lr: 0.001
+    # name: AdamW
+    # args:
+    #   lr: 0.01
+    #   betas: [0.9, 0.99]
+    #   eps: 1.e-15
+    # params:
+    #   geometry.encoding:
+    #     lr: 0.01
+    #   geometry.density_network:
+    #     lr: 0.01
+    #   geometry.feature_network:
+    #     lr: 0.01
+    #   background:
+    #     lr: 0.001
+
 
 trainer:
   max_steps: 10000
   log_every_n_steps: 1
   num_sanity_val_steps: 0
-  val_check_interval: 500
+  val_check_interval: 100
   enable_progress_bar: true
   precision: 32
 
