--- a/configs/shape-control.yaml
+++ b/configs/shape-control.yaml
@@ -6,8 +6,8 @@ seed: 0
 data_type: "random-camera-datamodule"
 data:
   batch_size: 1
-  width: 128
-  height: 128
+  width: 176
+  height: 176
   camera_distance_range: [1.5, 2.0]
   #fovy_range: [15, 60]
   #elevation_range: [0, 30]
@@ -135,9 +135,9 @@ system:
 
   loggers:
     wandb:
-      enable: false
+      enable: true
       project: "threestudio"
-      name: "shape_controlnet_muiltview_3step_armchair_test_1"
+      name: "1225_day_${system.prompt_processor.prompt}"
 
   loss:
     lambda_sds: 1.
@@ -177,7 +177,7 @@ trainer:
   max_steps: 10000
   log_every_n_steps: 1
   num_sanity_val_steps: 0
-  val_check_interval: 100
+  val_check_interval: 200
   enable_progress_bar: true
   precision: 32
 
